[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persist-ssh"
version = "1.0.1"
description = "Persistent SSH using dtach. Does not break scrollback. Use tmux locally."
readme = "README.md"
license = "GPLv3"
authors = [
    { name = "@readwithai", email = "talwrii@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
keywords = ["ssh", "dtach", "tmux", "persistent", "terminal", "session"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/talwrii/persist-ssh"
Repository = "https://github.com/talwrii/persist-ssh"
Issues = "https://github.com/talwrii/persist-ssh/issues"

[project.scripts]
persist-ssh = "persist_ssh.main:main"

[tool.hatch.build.targets.wheel]
packages = ["persist_ssh"]

[tool.hatch.build.targets.sdist]
include = [
    "/persist_ssh",
    "/README.md",
    "/pyproject.toml",
]
